configuración del css para el uso del display flex

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,27 @@
 *{
     margin: 0px;
     padding: 0px;
-    
+
+}
+
+.paginaPrincipal{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+.paginaPrincipal header,
+.paginaPrincipal footer{
+    width: 100%;
+    background-color: #a06a1d;
+    height: 100px;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+.colorwhite{
+    color: #ffffff;
 }
